fix:add the userInfo interface and fix videoDetail interface
