# web/user.go
@@ -16,6 +16,6 @@ func RegisterUserRoute(r *gin.RouterGroup, userController user.UserController, a
 		c.POST("/loginByPassword", ginx.WrapReq(userController.LoginByPassword))
 		c.POST("/loginByCode", ginx.WrapReq(userController.LoginByVerifyCode))
 		c.POST("/forgotPassword", ginx.WrapReq(userController.ForgotPassword))
-		c.GET("/getUser/:id", auth.MiddlewareFunc(), ginx.WrapUri(userController.GetUserByID))
+		c.GET("/getUserInfo", auth.MiddlewareFunc(), ginx.WrapClaim(userController.GetUserInfo))
 	}
 }
